feat: added placeholder hooks and added scoreboard configuration
Took 1 hour 45 minutes