@@ -1,12 +1,13 @@
 package me.lagggpixel.mango.config;
 
+import me.clip.placeholderapi.PlaceholderAPI;
 import me.lagggpixel.mango.Mango;
 import org.bukkit.ChatColor;
 import org.bukkit.configuration.file.YamlConfiguration;
+import org.bukkit.entity.Player;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 
@@ -22,10 +23,15 @@ public class LanguageFile {
   }
 
   public String getString(String path) {
-    if (this.configuration.contains(path)) {
-      return ChatColor.translateAlternateColorCodes('&', this.configuration.getString(path));
+    String string = this.configuration.getString(path);
+    if (string == null) {
+      return "ERROR: STRING NOT FOUND";
     }
-    return "ERROR: STRING NOT FOUND";
+
+    if (Mango.getInstance().isPlaceholderEnabled()) {
+      string = PlaceholderAPI.setPlaceholders(null, string);
+    }
+    return ChatColor.translateAlternateColorCodes('&', string);
   }
 
   public List<String> getStringList(String path) {
@@ -36,7 +42,7 @@ public class LanguageFile {
       }
       return strings;
     }
-    return Arrays.asList("ERROR: STRING LIST NOT FOUND!");
+    return List.of("ERROR: STRING LIST NOT FOUND!");
   }
 }
 
